--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,7 @@ version = "0.1.0"
 authors = ["Jarlish"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-rltk = { version = "0.8.1" }
+rltk = { git = "https://github.com/amethyst/bracket-lib" }
 specs = "0.17.0"
 specs-derive = "0.4.1"
